--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,62 +1,61 @@
-/* Grundlæggende layout og typografi for siden */
-html, body{
-height: 100%;
-margin: 0;
-padding: 0;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-color: #252525;
-}
-
-/* Centrering af indhold, side struktur */
-body{
-    text-align: center;
+/* Grundlæggende indstillinger for layout, font og farver */
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #252525;
     display: flex;
     flex-direction: column;
+}
+
+/* Centrering af indhold og konfiguration af grundlæggende tekststørrelse */
+body {
+    text-align: center;
     font-size: 18px;
 }
 
-/* Navigationsbar der bliver i toppen ved scroll og stilen */
-.nav-container {
+/* Stil og positionering af navigationsbaren der kommer med ved scroll */
+.nav-container-forside {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 2rem 0rem;
+    padding: 2rem 0;
     margin-right: 20px;
     background-color: #d9d9d9;
-    /* Fixed Top: Navigationsbaren forbliver i toppen når bruger scroller */
     position: fixed;
     top: 0;
     width: 100%;
 }
 
-/* Fjerner punkttegn fra listen og fjerner browserens default ved margin og padding  */
-ul{
+/* Fjerner punkttegn fra listen og fjerner browserens default ved margin og padding */
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     display: flex;
+    align-items: center;
 }
 
-/* Indstilling af links */
-ul li{
+/* Styling og margin for listeelementer/links */
+ul li {
     margin-right: 20px;
 }
 
-/* Grundlæggende stil for linksne i navigationsbaren */
+/* Grundlæggende styling af links i navigationsbaren */
 li a {
     color: #252525;
     text-decoration: none;
     font-weight: bold;
     font-size: 20px;
-    margin: 100px;
 }
 
-/* Når musen kører over menuen skifter teksten til lyserød og forbliver lyserød ved aktiv anvendelse */
+/* Hover-effekt og active-effekt for links */
 li a:hover, li a.active {
     color: rgb(244, 140, 160);
 }
 
-/* Design og funktion for knappen */
+/* Styling af 'Læs mere' knappen */
 .read-mere-knap {
     padding: 10px 20px;
     background-color: #7d7d7d;
@@ -64,100 +63,137 @@ li a:hover, li a.active {
     border: none;
     font-size: 18px;
     font-weight: bold;
-    cursor: pointer; /* Når musen kører over knappen kommer der en "hånd" */
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
 
-/* Når musen kører over knappen skifter teksten til lyserød */
+/* Hover-effekt for knappen */
 .read-mere-knap:hover {
     color: rgb(244, 140, 160);
 }
 
-/* Stil for pink-box */
-.pink-box {
-    width: 720px;
-    height: 740px;
-    display: flex;
-    background-color: rgba(244, 140, 160, 0.30);
-    top: 0;
-    bottom: 0;
-    right: 0;
-    z-index: -1; /* Placerer den pinke boks bag billedet */
-}
-
-/* Stil for billedet af mig der respondere */
-.billede {
+/* Flexbox-styling for pink-box som container */
+.pink-box-forside {
     width: 100%;
+    max-width: 700px;
+    height: 740px;
+    background-color: rgba(244, 140, 160, 0.30);
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+
+/* Responsivt billede inden i pink-box */
+.billede {
+    max-width: 100%;
     height: auto;
-    display: flex;
-
 }
 
-/* Stil for footer */
-footer {
-    font-size: 14px;
-    display: flex;
-}
-
-/* Fjerner default af address til 'normal' */
-footer address {
-    font-style: normal;
-}
-
-/* Stil for h1 */
-h1 {
-    font-size: 36px;
-    color: rgb(244, 140, 160);
-    display: flex;
-    flex-direction: column;
-}
-
-/* Stil for 'Multimediedesigner' */
-.first {
-    font-size: 30px;
-    font-weight: bold;
-    display: flex;
-    flex-direction: column;
-}
-
+/* Flex-model for hovedindholdet */
 main {
     display: flex; 
     align-items: center;
     justify-content: center;
-    flex-direction: row;
-}
-
-.intro {
-    margin: auto;
-
-}
-
-
-/* Tilpasning af layout til mobile enheder med skærmstørrelse op til 768px */
-@media (max-width: 768px) {
-    header nav, ul {
-        flex-direction: column;
-    }
-
-    ul li {
-        display: block;
-        margin: 10px 0;
-    }
-}
-
-/* Grundlæggende stil af footer */
-footer {
-    background-color: #d9d9d9;
-    text-align: center;
+    flex-direction: row;  /* Lægger elementer side om side */
+    flex-wrap: wrap;  /* Tillader elementer at wrappe på små skærme */
     padding: 20px;
 }
 
-/* Style af sociale medie ikoner */
-.socialemedier a img {
-    width: 30px;
-    height: 30px;
-    margin: 0 5px;
+/* Footer styling ved hjælp af flexbox */
+footer {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    background-color: #d9d9d9;
+    padding: 20px;
+    text-align: center;
+}
+
+/* Almindelig styling for footer adressen */
+footer address {
+    font-style: normal;
+}
+
+/* SStyling af overskrift */
+.navn-forside {
+    font-size: 36px;
+    color: rgb(244, 140, 160);
+    display: flex;
+    justify-content: center;
+}
+
+/* Styling og positionering af undertitel */
+.first-forside {
+    font-size: 30px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+}
+
+/* Flex-model for intro-sektion */
+.intro-forside {
+    max-width: 700px;
+    height: 640px;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 
+/* Nedestående begynder CSS for 'OM MIG' siden */
 
+/* Stil til hovedindholdet */
+.main-om-mig {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
 
+/* Indhold sektion: Intro tekst og billede */
+.intro-om-mig {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    max-width: 900px;
+    margin-top: 20px;
+    padding: 20px;
+}
+
+/* Stil for tekst og overskrifter */
+.overskrift-om-mig {
+    font-size: 36px;
+    color: rgb(244, 140, 160);
+}
+
+/* Profilbillede stil */
+.profile-pic {
+    width: 466px;
+    height: 565px;
+    margin: 160px;
+}
+
+/* Kompetencer sektion styling */
+.kompetencer {
+    width: 100%;
+    padding: 20px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+/* Enkelte færdigheder blok */
+.skill {
+    text-align: center;
+}
+
+.skill img {
+    width: 80px;
+    margin-bottom: 10px;
+}
