--- a/stylesheet.css
+++ b/stylesheet.css
@@ -147,7 +147,7 @@ footer address {
 /* Nedestående begynder CSS for 'OM MIG' siden */
 
 /* Stil til hovedindholdet */
-.main-om-mig {
+main {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -196,4 +196,42 @@ footer address {
 .skill img {
     width: 80px;
     margin-bottom: 10px;
+}
+
+
+/* Nedestående begynder CSS for 'PORTFOLIO' siden */
+
+/* Main Content Styles */
+main {
+    display: flex;
+    flex-direction: row;
+    padding-top: 70px; /* Enough padding to not be covered by fixed header */
+    width: 100%;
+}
+
+h1 {
+    margin-top: 20px;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    padding: 20px;
+}
+
+.item {
+    margin-bottom: 20px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.item img {
+    width: 100%;
+    height: auto;
+}
+
+.item h2, .item p {
+    text-align: center;
 }
