--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,10 +18,9 @@ body {
 /* Stil og positionering af navigationsbaren der kommer med ved scroll */
 .nav-container-forside {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-    padding: 2rem 0;
-    margin-right: 20px;
+    padding: 20px;
     background-color: #d9d9d9;
     position: fixed;
     top: 0;
@@ -31,10 +30,11 @@ body {
 /* Fjerner punkttegn fra listen og fjerner browserens default ved margin og padding */
 ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     display: flex;
     align-items: center;
+    margin-right: 10px;
 }
 
 /* Styling og margin for listeelementer/links */
@@ -53,6 +53,14 @@ li a {
 /* Hover-effekt og active-effekt for links */
 li a:hover, li a.active {
     color: rgb(244, 140, 160);
+}
+
+/* Styling af logoet */
+.logo {
+    height: 50px;
+    width: auto; 
+    margin-right: auto;
+    margin-left: 10px;
 }
 
 /* Styling af 'Læs mere' knappen */
@@ -74,49 +82,39 @@ li a:hover, li a.active {
     color: rgb(244, 140, 160);
 }
 
+/* Flexbox opsætning for hovedindholdet */
+.main-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-around;
+}
+
 /* Flexbox-styling for pink-box som container */
 .pink-box-forside {
-    width: 100%;
-    max-width: 700px;
-    height: 740px;
+    width: 822px;
+    height: 874px;
     background-color: rgba(244, 140, 160, 0.30);
     display: flex;
     align-items: center;
-    justify-content: right;
+    justify-content: left;
 }
 
 /* Responsivt billede inden i pink-box */
 .billede {
-    max-width: 100%;
-    height: auto;
+    width: 822px;
+    height: 874px;
 }
 
-/* Flex-model for hovedindholdet */
-main {
-    display: flex; 
+/* Flex-model for intro-sektion */
+.intro-forside {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-direction: row;  /* Lægger elementer side om side */
-    flex-wrap: wrap;  /* Tillader elementer at wrappe på små skærme */
-    padding: 20px;
 }
 
-/* Footer styling ved hjælp af flexbox */
-footer {
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-    background-color: #d9d9d9;
-    padding: 20px;
-    text-align: center;
-}
-
-/* Almindelig styling for footer adressen */
-footer address {
-    font-style: normal;
-}
-
-/* SStyling af overskrift */
+/* Styling af overskrift */
 .navn-forside {
     font-size: 36px;
     color: rgb(244, 140, 160);
@@ -128,67 +126,143 @@ footer address {
 .first-forside {
     font-size: 30px;
     font-weight: bold;
-    display: flex;
-    justify-content: center;
 }
 
-/* Flex-model for intro-sektion */
-.intro-forside {
-    max-width: 700px;
-    height: 640px;
-    margin-top: 100px;
+.navn-forside, .first-forside {
+    margin: 10px;
+    padding: 0px;
+}
+
+/* Footer styling ved hjælp af flexbox */
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #d9d9d9;
+    font-size: 14px;
+}
+
+/* Almindelig styling for footer adressen */
+footer address {
+    font-style: normal;
+}
+
+.lokation-ikon {
+    width: auto;
+    height: 24px;
+}
+.mail-ikon {
+    width: 24px;
+    height: 24px;
+}
+
+.telefon-ikon {
+    width: 24px;
+    height: 24px;
+}
+
+.footer-info {
+    display: flex;
+    align-items: center;
+    margin: 0 10px;
+    margin-right: auto;
+    margin-left: 10px;
+}
+
+/* Styling af sociale medie ikoner */
+.socialemedier a img {
+    width: auto;
+    height: 24px;
+    margin-right: 10px;
+    margin-inline: 10px;
+}
+
+
+/* Mediequeries for responsivt design */
+@media (max-width: 768px) {
+    .main-content {
+        flex-direction: column;
+    }
+
+    .intro-forside, .pink-box-forside {
+        max-width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .socialemedier a img {
+        width: 15px;
+        height: 15px;
+    }
+}
+
+
+
+
+/* Nedestående er CSS for 'OM MIG' siden */
+
+/* Flex-model for indholdet */
+.indhold {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-
-/* Nedestående begynder CSS for 'OM MIG' siden */
-
-/* Stil til hovedindholdet */
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin-top: 150px; /* Plads til den fastgjorte navigationsbar */
     padding: 20px;
 }
 
-/* Indhold sektion: Intro tekst og billede */
+/* Introduktion på om-mig siden */
 .intro-om-mig {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    max-width: 1200px;
     width: 100%;
-    max-width: 900px;
-    margin-top: 20px;
+    margin-top: 50px;
     padding: 20px;
 }
 
-/* Stil for tekst og overskrifter */
+.tekst-overst-om-mig {
+    max-width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 .overskrift-om-mig {
     font-size: 36px;
     color: rgb(244, 140, 160);
 }
 
-/* Profilbillede stil */
-.profile-pic {
-    width: 466px;
-    height: 565px;
-    margin: 160px;
+.brødtekst-om-mig {
+    margin-top: 10px;
+    font-size: 18px;
 }
 
-/* Kompetencer sektion styling */
+/* Styling af profilbillede */
+.profile-pic {
+    max-width: 50%;
+    height: auto;
+    margin-left: 20px;
+}
+
+/* Kompetencer sektion */
 .kompetencer {
+    max-width: 1200px;
     width: 100%;
+    margin-top: 50px;
     padding: 20px;
-    margin-top: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
 }
 
-/* Enkelte færdigheder blok */
+.skills {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
 .skill {
     text-align: center;
 }
@@ -199,24 +273,31 @@ main {
 }
 
 
+
+
+
+
 /* Nedestående begynder CSS for 'PORTFOLIO' siden */
 
-/* Main Content Styles */
 main {
     display: flex;
-    flex-direction: row;
-    padding-top: 70px; /* Enough padding to not be covered by fixed header */
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
     width: 100%;
 }
 
-h1 {
-    margin-top: 20px;
+.overskrift-portfolio {
+    margin-top: 150px;
+    text-align: left;
+    color: rgb(244, 140, 160);
+    font-size: 36px;
 }
 
 .gallery {
     display: flex;
     flex-wrap: wrap;
-    justify-content: left;
+    justify-content: center;
     padding: 20px;
 }
 
@@ -225,6 +306,7 @@ h1 {
     padding: 10px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .item img {
@@ -235,3 +317,127 @@ h1 {
 .item h2, .item p {
     text-align: center;
 }
+
+
+
+/* Nedestående begynder CSS for 'KONTAKT MIG' siden */
+
+/* Kontaktinformation sektion styling */
+.contact-info {
+    margin-top: 100px;
+    padding: 50px;
+}
+
+.contact-info h1 {
+    font-size: 36px;
+    text-align: left;
+    color: rgb(244, 140, 160);
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.info-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 50px;
+}
+
+/* Styling af kontakt detaljer */
+.contact-details {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-item {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    margin-bottom: 10px;
+}
+
+/* Mellemrum/luft mellem ikone og tekst */
+.contact-item p{
+    margin-left: 20px;
+}
+
+
+/* Mellemrum/luft mellem tekst og billede samt overskrift og tekst */
+.info-text-contact {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    padding-right: 100px;
+}
+
+/* Styling af lyserødboks under billedet af mig */
+.contact-image {
+    background-color: rgba(244, 140, 160, 0.30);
+    width: 865px;
+    height: 577px;
+    display: flex;
+    justify-content: right;
+}
+
+.contact-image img {
+    width: 865px;
+    height: 577px;
+}
+
+.contact-image img, .info-text {
+    display: flex;
+    flex-direction: column;
+}
+
+/* Styling af 'kontakt!' samt 'lyserøde bokse' */
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 100%;
+}
+
+.contact-form h2 {
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+/* Styling af 'paragraf' - 'kontakt mig' */
+.contact-form p{
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+/* Styling af 'kontakt mig boksene' */
+form input, form textarea {
+    width: 100%;
+    padding: 30px;
+    margin-bottom: 30px;
+    background-color: rgba(244, 140, 160, 0.20);
+    border: none;
+    font-size: 14px;
+}
+
+/* Styling af 'send knappen' */
+form button {
+    padding: 10px 40px;
+    background-color: #7d7d7d;
+    color: #252525;
+    border: none;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    margin-top: 20px;
+    margin-bottom: 100px;
+    float: left;
+}
+
+/* Hover-effekt for 'send knappen' */
+form button:hover {
+    color: rgb(244, 140, 160);
+}
+
